<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="true"
    android:id="@+id/cover_menu">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        android:alpha="0.6"
        android:id="@+id/cover_menu_bar"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:weightSum="5"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:id="@+id/cover_btnItem01">
            <theagency.vn.view.AppButton
                android:id="@+id/btnUns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_uber"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="5pt"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"/>
            <View
                android:layout_width="@dimen/line_width"
                android:layout_height="1dp"
                android:background="@color/BlackAlpha20"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:id="@+id/cover_btnItem02">
            <theagency.vn.view.AppButton
                android:id="@+id/btnEmgega"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_emgage"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="5pt"
                android:background="@android:color/transparent"
                />
            <View
                android:layout_width="@dimen/line_width"
                android:layout_centerHorizontal="true"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/BlackAlpha20"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:id="@+id/cover_btnItem03">
            <theagency.vn.view.AppButton
                android:id="@+id/btnDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_detail"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="5pt"
                android:background="@android:color/transparent"
                />
            <View
                android:layout_width="@dimen/line_width"
                android:layout_centerHorizontal="true"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/BlackAlpha20"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:id="@+id/cover_btnItem04">
            <theagency.vn.view.AppButton
                android:id="@+id/btnContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_contact"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="5pt"
                android:background="@android:color/transparent"
                />
            <View
                android:layout_width="@dimen/line_width"
                android:layout_centerHorizontal="true"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/BlackAlpha20"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:id="@+id/cover_btnItem05">
            <theagency.vn.view.AppButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_link"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="5pt"
                android:background="@android:color/transparent"
                android:id="@+id/btnLink"
                />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
